--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css" integrity="">
-    <link rel="icon"  type="image/x-icon" href="/artie.jpg">
+    <link rel="icon" href="/artie.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Artie Bucco's Vesuvio</title>
   </head>
   <body>
@@ -14,8 +14,8 @@
       <nav>
         <h1>Recipe App</h1>
         <form>
-          <input type="text" placeholder="Search for recipes" class="searchBox" />
-          <button type="submit" class="searchBtn"> Search</button>
+          <input type="text" placeholder="Search for recipes" class="searchBox"/>
+          <button type="submit" class="searchBtn">Search</button>
         </form>
       </nav>
     </header>
